fix staff_top and event list

--- a/flask_app/templates/staff/staff_top.html
+++ b/flask_app/templates/staff/staff_top.html
@@ -17,7 +17,8 @@
 				<input type="button" class="menu_button" value="イベントカテゴリ管理" onClick="alert('未実装')">
 			</p>
 			<p>
-				<input type="button" class="menu_button" value="イベント管理" onClick="alert('未実装')">
+				<input type="button" class="menu_button" value="イベント管理" 
+				    onClick="window.location.href=`{{url_for('show_event_list')}}`">
 			</p>
 			<p>
 				<input type="button" class="menu_button" value="チケット管理"
