--- a/flask_app/templates/staff/staff_top.html
+++ b/flask_app/templates/staff/staff_top.html
@@ -14,7 +14,7 @@
 					onClick="window.location.href=`{{url_for('staff_manage_customer')}}`">
 			</p>
 			<p>
-				<input type="button" class="menu_button" value="イベントカテゴリ管理" onClick="alert('未実装')">
+				<input type="button" class="menu_button" value="イベントカテゴリ管理" onClick="window.location.href=`{{url_for('staff_event_category')}}`"><!---->
 			</p>
 			<p>
 				<input type="button" class="menu_button" value="イベント管理" onClick="alert('未実装')">
