登録ドーム遷移を追加

--- a/flask_app/templates/staff/manage_event/input.html
+++ b/flask_app/templates/staff/manage_event/input.html
@@ -4,7 +4,7 @@
 
 {# イベントの登録フォーム #}
 <div class="container">
-    <form action="#" method="post">
+    <form action="{{url_for('confirm_event_new')}}" method="post">
 
         <div class="form-group">
             <label for="event_name" class="form-label">イベント名<span style="color: red;">(必須)</span></label>
