--- a/flask_app/templates/staff/manage_event/detail.html
+++ b/flask_app/templates/staff/manage_event/detail.html
@@ -2,11 +2,11 @@
 {% block body %}
 
 
-    <h1>イベント名</h1>
+    <h1>{{event.event_name}}</h1>
 
-    <p>開催日：{event_date}</p>
-    <p>開催場所：{event_place}</p>
-    <p>概要<br>{overview}</p>
+    <p>開催日：{{event.event_date}}</p>
+    <p>開催場所：{{event.event_place}}</p>
+    <p>概要<br>{{overview}}</p>
 
     <button>編集</button>
     <button>一覧に戻る</button>
