--- a/flask_app/templates/staff/manage_event/confirm.html
+++ b/flask_app/templates/staff/manage_event/confirm.html
@@ -28,6 +28,6 @@
     <button type="submit" class="btn">新規登録</button>
 </form>
 
-<button>前に戻る</button>
+<a href="{{url_for('show_event_new')}}" class="btn btn-secondary">前に戻る</a>
 
 {% endblock %}
