--- a/flask_app/templates/staff/manage_event/input.html
+++ b/flask_app/templates/staff/manage_event/input.html
@@ -42,7 +42,7 @@
         <button type="submit" class="btn">確認</button>
     </form>
     
-    <button>一覧に戻る</button>
+    <a href="{{url_for('show_event_list')}}" class="btn btn-secondary">一覧に戻る</a>
     
 </div>
 
