--- a/flask_app/templates/layout_staff.html
+++ b/flask_app/templates/layout_staff.html
@@ -13,6 +13,11 @@
 	</script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
 	</script>
+	<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+	crossorigin="anonymous"
+  	></script>
 
 	<!-- サイト共用 CSS -->
 	<link rel="stylesheet" href="/static/css/common/base.css">
@@ -20,6 +25,12 @@
 	<link rel="stylesheet" href="/static/css/common/form.css">
 	<link rel="stylesheet" href="/static/css/common/list.css">
 	<link rel="stylesheet" href="/static/css/common/table.css">
+	<link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
 
 </head>
 
