--- a/flask_app/templates/staff/manage_event/detail.html
+++ b/flask_app/templates/staff/manage_event/detail.html
@@ -6,10 +6,10 @@
 
     <p>開催日：{{event.event_date}}</p>
     <p>開催場所：{{event.event_place}}</p>
-    <p>概要<br>{{overview}}</p>
+    <p>概要<br>{{event.event_overview}}</p>
 
-    <button>編集</button>
-    <button>一覧に戻る</button>
+    <a href="{{url_for('show_event_edit', event_id=event.event_id)}}" class="btn btn-primary">編集</a>
+    <a href="{{url_for('show_event_list')}}" class="btn btn-secondary">一覧に戻る</a>
     <button>削除</button>
 
 
