新規作成機能の追加

--- a/flask_app/templates/staff/manage_event/confirm.html
+++ b/flask_app/templates/staff/manage_event/confirm.html
@@ -4,7 +4,10 @@
 
 {# イベントの登録フォーム #}
 
-<form action="#" method="post">
+<form action="{{url_for('submit_event_new')}}" method="post">
+    <div class="form-group">
+        <input type="hidden" class="form-control" name="event_category_id" value="{{event_category_id}}">{{event_category_id}}
+    </div>
 
     <div class="form-group">
         <label for="event_name" class="form-label">イベント名<span style="color: red;">(必須)</span></label>
@@ -22,8 +25,8 @@
     </div>
 
     <div class="form-group">    
-        <label for="overview" class="form-label">概要</label>
-        <textarea type="text" class="form-control" id="overview" name="overview" readonly>{{overview}}</textarea>
+        <label for="event_overview" class="form-label">概要</label>
+        <textarea type="text" class="form-control" id="overview" name="event_overview" readonly>{{event_overview}}</textarea>
     </div>
     <button type="submit" class="btn">新規登録</button>
 </form>
