--- a/flask_app/templates/staff/manage_event/input.html
+++ b/flask_app/templates/staff/manage_event/input.html
@@ -19,7 +19,7 @@
                     <input class="form-check-input" type="checkbox" value="" id="{{ event_category.id }}" name="event_categories">
                     <label class="form-check-label" for="{{ event_category.id }}">{{ event_category.category_name }}</label>
                 {% else %}
-                <p>イベントカテゴリが見つかりませんでした。</p>
+                <input type="radio" id="contactChoice1" name="event_category_id" value="1" checked required>1
                 {% endfor %}
             </div>
         </div>
@@ -35,8 +35,8 @@
         </div>
     
         <div class="form-group">
-            <label for="overview" class="form-label">概要</label>
-            <textarea type="text" class="form-control" id="overview" name="overview"></textarea>
+            <label for="event_overview" class="form-label">概要</label>
+            <textarea type="text" class="form-control" id="event_overview" name="event_overview"></textarea>
         </div>
     
         <button type="submit" class="btn">確認</button>
