--- a/flask_app/templates/staff/event_category/input.html
+++ b/flask_app/templates/staff/event_category/input.html
@@ -11,7 +11,7 @@
     <p class="menu">
       <a href="{{ url_for('staff_staff_top') }}">スタッフメニュー</a>
       >
-      <a href="{{ url_for('staff_event_category') }}">会員管理</a>
+      <a href="{{ url_for('show_main_category') }}">イベントカテゴリ管理</a>
       {% if mode == 'create' %}
       > 新規登録
       {% elif mode == 'update' %}
@@ -24,26 +24,25 @@
 <!-- メインコンテンツ領域 -->
 <main>
   <div class="container">
-    <h1 id="main_title">
-      <!-- ここに ページタイトルを表示する -->
-    </h1>
-    <h2 id="main_sub_title">イベントカテゴリ情報</h2>
-
-    <form name="inputForm" method="post">
-      <div id="form_area" class="base_pattern">
-        <p>イベントカテゴリ名</p>
-        <p><input name="event_category_name" type="text" value="{{ event_category_name }}" readonly="readonly"></p>
-
-        <!-- hidden属性の項目 -->
-        <input name="category_id" type="hidden" value="{{ category_id }}">
-      </div>
-
-      <div id="button_area">
-        <input type="button" class="other_button" value="一覧画面へ戻る"
-          onclick="location.href=`{{ url_for('staff_event_category) }}`">
-        <input type="submit" formaction="{{ url_for('confirm_event_category', mode=mode) }}" class="go_next_button"
-          value="確認画面へ">
-      </div>
+    
+    <form action="{{url_for('add_event_category', event_category_id=target_event_category.event_category_id )}}" method="post">
+      {% if mode=="create" %}
+      <p><span>以下に新規登録内容を記述してください。</span></p>
+      <label for="event_category_name">イベントカテゴリ名</label>
+      <br>
+      <input type="text" name="event_category_name" id="event_category_name">
+      {% elif mode=="update" %}
+      <p><span>以下に変更内容を記述してください。</span></p>
+      <label for="event_category_name">イベントカテゴリ名</label>
+      <br>
+      <input type="hidden" name="event_category_id" value="{{ target_event_category.event_category_id }}">
+      <input name="event_category_name" name="event_category_name" value="{{ target_event_category.event_category_name }}" type="text">
+      {% endif %}
+      {% if mode=="create" %}
+      <button type="submit" class="btn btn-primary" name="button" value="create">新規登録</button>
+      {% elif mode=="update" %}
+      <button type="submit" class="btn btn-primary" name="button" value="update">変更</button>
+      {% endif %}
     </form>
   </div>
 </main>
