詳細画面のカテゴリを表示

--- a/flask_app/templates/staff/manage_event/detail.html
+++ b/flask_app/templates/staff/manage_event/detail.html
@@ -3,7 +3,7 @@
 
 
     <h1>{{event.event_name}}</h1>
-
+    <p>イベントカテゴリ：{{event_category.event_category_name}}</p>
     <p>開催日：{{event.event_date}}</p>
     <p>開催場所：{{event.event_place}}</p>
     <p>概要<br>{{event.event_overview}}</p>
