--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -8,7 +8,8 @@
         onclick="window.location.href=`{{url_for('staff_staff_login')}}`">
 </p>
 <p>
-    <input type="button" class="menu_button" value="会員画面" onclick="alert('未実装')">
+    <input type="button" class="menu_button" value="会員画面" 
+        onclick="window.location.href=`{{url_for('show_user_event_list')}}`">
 </p>
 
 {% endblock %}
