--- a/flask_app/templates/layout_user.html
+++ b/flask_app/templates/layout_user.html
@@ -25,12 +25,6 @@
 	<link rel="stylesheet" href="/static/css/common/form.css">
 	<link rel="stylesheet" href="/static/css/common/list.css">
 	<link rel="stylesheet" href="/static/css/common/table.css">
-	<link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
 
 </head>
 
@@ -39,25 +33,33 @@
 	<header>
 		<div class="container">
 			<div class="site_title">
-				<a href="{{url_for('staff_staff_top')}}"><img src="/static/images/logo_staff.png" alt="ムジクロチケット"></a>
+				<a href="{{url_for('show_user_event_list')}}"><img src="/static/images/logo_customer.png" alt="ムジクロチケット"></a>
 			</div>
 			<div class="user_infomation">
 				<p>
-					{% if not session.logged_in_customer %}
+					{% if not session.logged_in_staff %}
 					ゲストさん
-					{% elif session.logged_in_customer_account %}
-					{{ session.logged_in_customer_name }}さん
+					{% elif session.logged_in_staff_account %}
+					{{ session.logged_in_staff_name }}さん
 					{% endif %}
 				</p>
-				<p>
-					{% if not session.logged_in_customer %}
-					<input id="logout_button" type="button" value="ログアウト"
-						onClick="location.href=`{{url_for('logout_staff')}}`">
-					{% elif session.logged_in_customer_account %}
-					<input id="logout_button" type="button" value="ログイン"
-						onClick="location.href=`{{url_for('logout_staff')}}`">
-					{% endif %}
-				</p>
+				<div style="display: flex;">
+					<p>
+						{% if session.logged_in_staff %}
+						<input id="" type="button" value="マイページ"
+							onClick="location.href=``">
+						{% endif %}
+					</p>
+					<p style="margin-left: 10px;">
+						{% if session.logged_in_staff %}
+						<input id="logout_button" type="button" value="ログアウト"
+							onClick="location.href=``">
+						{% else %}
+						<input id="logout_button" type="button" value="ログイン"
+						onClick="location.href=``">
+						{% endif %}
+					</p>
+				</div>
 			</div>
 		</div>
 	</header>
