--- a/flask_app/templates/layout_user.html
+++ b/flask_app/templates/layout_user.html
@@ -56,7 +56,7 @@
 							onClick="location.href=``">
 						{% else %}
 						<input id="logout_button" type="button" value="ログイン"
-						onClick="location.href=``">
+						onClick="location.href=`{{url_for('show_login')}}`">
 						{% endif %}
 					</p>
 				</div>
