--- a/flask_app/templates/layout_staff.html
+++ b/flask_app/templates/layout_staff.html
@@ -43,17 +43,17 @@
 			</div>
 			<div class="user_infomation">
 				<p>
-					{% if not session.logged_in_customer %}
+					{% if not session.logged_in_staff %}
 					ゲストさん
-					{% elif session.logged_in_customer_account %}
-					{{ session.logged_in_customer_name }}さん
+					{% elif session.logged_in_staff_account %}
+					{{ session.logged_in_staff_name }}さん
 					{% endif %}
 				</p>
 				<p>
-					{% if not session.logged_in_customer %}
+					{% if not session.logged_in_staff %}
 					<input id="logout_button" type="button" value="ログアウト"
 						onClick="location.href=`{{url_for('logout_staff')}}`">
-					{% elif session.logged_in_customer_account %}
+					{% elif session.logged_in_staff_account %}
 					<input id="logout_button" type="button" value="ログイン"
 						onClick="location.href=`{{url_for('logout_staff')}}`">
 					{% endif %}
