--- a/flask_app/templates/customer/customer_login.html
+++ b/flask_app/templates/customer/customer_login.html
@@ -1,4 +1,4 @@
-{% extends "layout_user.html" %}
+{% extends "layout_customer.html" %}
 {% block body %}
 
 <form action="{{url_for('customer_login')}}" method="post">
