--- a/flask_app/templates/layout_customer.html
+++ b/flask_app/templates/layout_customer.html
@@ -33,7 +33,7 @@
 	<header>
 		<div class="container">
 			<div class="site_title">
-				<a href="{{url_for('show_user_event_list')}}"><img src="/static/images/logo_customer.png" alt="ムジクロチケット"></a>
+				<a href="{{url_for('show_customer_event_list')}}"><img src="/static/images/logo_customer.png" alt="ムジクロチケット"></a>
 			</div>
 			<div class="user_infomation">
 				<p>
