--- a/flask_app/templates/customer/customer_event/detail.html
+++ b/flask_app/templates/customer/customer_event/detail.html
@@ -1,4 +1,4 @@
-{% extends "layout_user.html" %}
+{% extends "layout_customer.html" %}
 {% block body %}
 
     <h1>{{event.event_name}}</h1>
@@ -7,7 +7,7 @@
     <p>開催場所：{{event.event_place}}</p>
     <p>概要<br>{{event.event_overview}}</p>
 
-    <a href="{{url_for('show_user_event_list')}}" class="btn btn-secondary">一覧に戻る</a>
+    <a href="{{url_for('show_customer_event_list')}}" class="btn btn-secondary">一覧に戻る</a>
     <a href="" class="btn btn-success">予約する</a>
 
 {% endblock %}
