--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -9,7 +9,7 @@
 </p>
 <p>
     <input type="button" class="menu_button" value="会員画面" 
-        onclick="window.location.href=`{{url_for('show_user_event_list')}}`">
+        onclick="window.location.href=`{{url_for('show_customer_event_list')}}`">
 </p>
 
 {% endblock %}
