--- a/flask_app/templates/customer/customer_ticket/comfirm.html
+++ b/flask_app/templates/customer/customer_ticket/comfirm.html
@@ -6,7 +6,7 @@
 <nav>
     <div class="container">
         <p class="menu">
-            <a href="{{ url_for('customer_coustomer_top') }}">会員一覧</a>
+            <a href="{{ url_for('show_customer_event_list') }}">イベんト一覧</a>
             >
             <a href="{{ url_for('customer_manage_ticket') }}">チケット予約</a>
             {% if mode == 'get_ticket' %}
@@ -21,45 +21,44 @@
 
 <!-- メインコンテンツ領域 -->
 <div class="event_inf">
-    <div class ="confirm_text_area">
+    <div class="confirm_text_area">
         {% if mode = 'get_ticket' %}
         <p>以下の内容でチケットを予約します。</p>
         {% elif mode == 'delete_ticket' %}
         <p>以下の内容でチケットを削除します。</p>
     </div>
-    <div class="event_name"> <!--イベント名-->
-        <h1>アルティメットイベント名</h1>
-    </div>
-    <div class="event_date"> <!--イベント日時-->
-        <h1>2023/5/2</h1>
-    </div>
-    <div class="event_state"> <!--イベント場所-->
-        <h1>東京ビックサイト</h1>
-    </div>
-    <div class ="get_myintro">
-        <p>アカウント名</p>
-        <input class = "customer_acount_name" value="{{/}}" disabled><br>
-        <p>password</p>
-        <input class = "customer_acount_password" value="{{/}}" disabled><br>
-        <p>会社名</p>
-        <input class = "customer_acount_company" value="{{/}}" disabled><br>
-        <p>郵便番号</p>
-        <input class = "customer_acount_yubin_number" value="{{/}}" disabled><br>
-        <p>住所</p>
-        <input class = "customer_acount_address" value="{{/}}" disabled><br>
-        <p>電話番号</p>
-        <input class = "customer_acount_tel_number" value="{{/}}" disabled><br>
-
-    </div>
+    <h1>{{event.event_name}}</h1>
+    <p>イベントカテゴリ：{{event_category.event_category_name}}</p>
+    <p>開催日：{{event.event_date}}</p>
+    <p>開催場所：{{event.event_place}}</p>
+    <form method="post" action="{{url_for('show_customer_ticket_confirm')}}">
+        <div class="form-group">
+            <label>アカウント名：</label>
+            <input class="form-control" name="customer_account" type="text" value="{{customer_account}}" disabled>
+            <br>
+            <label>パスワード<span class="required">（必須）</span>：</label>
+            <input class="form-control" name="customer_password" type="password" value="{{customer_password}}" disabled>
+            <br>
+            <label>郵便番号</label>
+            <input class="form-control" name="customer_zipcode" type="tel" value ="{{customer_zipcode}}" disabled>
+            <br>
+            <label>住所</label>
+            <input class="form-control" name="customer_address" type="text" value ="{{customer_address}}" disabled>
+            <br>
+            <label>電話番号：</label>
+            <input class="form-control" name="customer_phone" type="tel" value ="{{customer_phone}}" disabled>
+    
+          </div>
+    </form>
     <div id="button_area">
         <input type="button" class="other_button" value="一覧画面へ戻る"
             onclick="location.href=`{{url_for('customer_coustomer_top'}}`">
         {% if mode = 'get_ticket' %}
-        <input type="submit" formaction="{{ url_for('customer_coustomer_top', mode=mode) }}" class="go_next_button"
+        <input type="submit" formaction="{{ url_for('customer_top', mode=mode) }}" class="go_next_button"
             value="予約">
         {% elif mode == 'delete_ticket' %}
-        <input type="submit" formaction="{{ url_for('customer_coustomer_top', mode=mode) }}" class="go_next_button"
-        value="削除">
+        <input type="submit" formaction="{{ url_for('customer_top', mode=mode) }}" class="go_next_button"
+            value="削除">
     </div>
 </div>
 {% endblock %}
